<!--
  ~ /**
  ~   Created by Yoga Setiawan on 12/11/19 10:46 PM
  ~   Copyright (c) 2019 . All rights reserved.
  ~   Last modified 11/12/19 8:56 AM
  ~   Github : https://github.com/arioki1/Submission-Kelas-Kade-Dicoding.git
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/btnMenuSearch"
        android:icon="@drawable/ic_search_black_24dp"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/showFavorite"
        android:icon="@drawable/ic_favorites"
        android:title=""
        app:showAsAction="always" />
</menu>