...
                android:text="@string/date_and_time"
                app:layout_constraintEnd_toEndOf="@+id/tvDetailNameEvent"
                app:layout_constraintStart_toStartOf="@+id/tvDetailNameEvent"
                app:layout_constraintTop_toBottomOf="@+id/tvDetailNameEvent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDetailEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:overScrollMode="never"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">
...
